# Kenbun-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  KENBUN.md  LICENSE  POST_MORTEM.md  README.md  SKILL.md  STRUCTURE.md  docker-compose.yml  install.sh  pyproject.toml  test_pt.py
core/: .env.example  .gitignore  ARCHITECTURE_AUDIT.md  DEPLOYMENT_GUIDE.md  DESIGN.md  Dockerfile  FILE_GLOSSARY.md  HOW_TO_MEASURE_PROGRESS.md  Makefile  NEURAL_HIERARCHY.md  OPERATIONS_MANUAL.md  POST_MORTEM.md  STRUCTURE.md  SYSTEM_MAP.md  VOIP_SETUP.md  __init__.py  docker-compose.local-llm.yml  docker-compose.yml  import_diagnostic.py  pyproject.toml  requirements-docker.txt  requirements.txt  start_handsfree.sh  start_swarm_cli.sh  workspace_config.json
core/.agent/rules/: the-augmented-cto.md
core/agents/: __init__.py  adapter.py  mock_sdk.py  trace.py  workflow.py
core/benchmarks/: AUTONOMOUS_LEARNING.py  CHAOS_TEST.py  GENERATE_150_CASES.py  HALLUCINATION_TEST.py  STRATEGY_BENCHMARK.py  benchmark_protocol.py  chaos_orchestrator.py  daily_report.py  nightly_eval.py
core/design_systems/sovereign-sharp/: DESIGN.md
core/dev/self_evolution/: SOTU_REPORT.md  awareness_engine.py
core/hivemind_memory/: hive_memory.py
core/ingestion/: README.md
core/research/: gemini_pricing.md
core/scratch/: swarm_test.py  test_models_direct.py  test_supervisor_demo.py  test_sve_breach.py
core/scripts/: check_pc_brain.py  sync_hivemind.py
core/services/: swarm_daemon.py
core/tests/: bayesian_hme_test.py  cart_benchmark.py  conftest.py  hme_benchmark.py  hme_benchmark_100k.py  hme_benchmark_1k.py  hme_benchmark_20k.py  hme_benchmark_5k.py  hme_failure_audit.py  integrity_test.py  mars_test.py  master_swarm_test.py  security_penetration_test.py  test_autonomic.py  test_autopilot.py  test_brain_health.py  test_chaos.py  test_chat_sessions.py  test_ensemble.py  test_linter_autofix.py  test_llm_utils.py  test_lmstudio_router.py  test_mab.py  test_mcp_integration.py  test_parallel.py  test_ralph_loop.py  test_smoke.py  test_speculative_decoding.py  test_strategy.py  test_system_2_rigor.py  test_token_governor.py
core/tools/: __init__.py  harvester.py  registry.py  swarm_report_auth.md  swarm_trigger.py
core/tools/audit/: adversarial_court.py  budget_dashboard.py  consult_architect.py  discovery_agent.py  ensemble_audit.py  gemini_reviewer.py  guardrail_agent.py  linter_autofix.py  (+5 more)
core/training_data/: Modefile  export_brain.py  train_brain.py
(+138 files in other folders)
