[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kenbun-agent"
version = "2.1.0"
description = "Hardware-agnostic standalone containerized Kenbun Agentic Swarm"
readme = "KENBUN.md"
requires-python = ">=3.11"
authors = [
    { name = "Sovereign Swarm Architects", email = "dev@sovereignswarm.org" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "chromadb>=0.4.15",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "mcp>=0.1.0",
    "duckduckgo-search>=3.8.5",
    "google-genai>=0.1.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
ml = [
    "onnxruntime>=1.15.0",
    "sentence-transformers>=2.2.0",
    "tokenizers>=0.13.0",
]
test = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]
